--- a/chat-ui/signup.html
+++ b/chat-ui/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href=css/style.css>
 </head>
 <body>
 
@@ -14,10 +14,14 @@
         <form>
             <input type="email" placeholder="Email Address" required>
                 
+            <input type="text" placeholder="Username" required>
+
             <input 
-                type="tel" 
-                placeholder="Phone Number" 
-                pattern="[0-9]{10}" 
+                type="tel"
+                placeholder="Phone Number"
+                pattern="[0-9]{10}"
+                inputmode="numeric"
+                maxlength="10"
                 required
             >
                 
